--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 
+<html>
+  <head>
+	<meta charset="utf-8">
+	<title>Название сайта</title>
+	<meta name="description" content="Описание сайта">
+	<meta name="keywords" content="Ключевые фразы через запятую">
+	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+  <body>
+    
+  </body>
+</html>
