--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<title>Название сайта</title>
-	<meta name="description" content="Описание сайта">
+	<title>Web-Safe</title>
+	<meta name="description" content="Описание">
 	<meta name="keywords" content="Ключевые фразы через запятую">
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
   <body>
-    <p>Серёжа лошок</p>
+    <div>
+      <p>Серёжа лошок</p>
+    </div>
   </body>
 </html>
