--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+	<header></header>
   <body>
     <div>
       <p>Серёжа лошок</p>
     </div>
   </body>
+	<footer></footer>
 </html>
