--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
 <html>
-  <head>
+<head>
 	<meta charset="utf-8">
 	<title>Web-Safe</title>
 	<meta name="description" content="Описание">
@@ -8,11 +7,11 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-	<header></header>
-  <body>
+<header></header>
+<body>
     <div>
-      <p>Серёжа лошок</p>
+      <p1>сайт ммм, вас заскамили</p1>
     </div>
-  </body>
-	<footer></footer>
+</body>
+<footer></footer>
 </html>
