--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 	<meta name="description" content="Описание">
 	<meta name="keywords" content="Ключевые фразы через запятую">
 	<link rel="icon" type="image/png" href="favicon.png">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="src/css/index.css">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css">
 </head>
 <header></header>
 <body>
+	<script src="src/js/main.js">
+	</script>
+	<script src="src/js/index.js">
+	</script>
     <div>
       <p1>сайт ммм, вас заскамили</p1>
     </div>
