--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 	<meta charset="utf-8">
 	<title>Web-Safe</title>
 	<meta name="description" content="Описание">
-	<meta name="keywords" content="Ключевые фразы через запятую">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<meta name="keywords" content="">
+	<link rel="icon" type="image/png" href="src/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="src/css/index.css">
 	<link rel="stylesheet" type="text/css" href="src/css/main.css">
+	<script src="src/js/main.js"></script>	<script src="src/js/index.js"></script>
 </head>
 <header></header>
 <body>
-	<script src="src/js/main.js">
-	</script>
-	<script src="src/js/index.js">
-	</script>
-    <div>
-      <p1>сайт ммм, вас заскамили</p1>
+    <div id="content">
+		<div>
+			<p1>сайт ммм, вас заскамили</p1>
+		</div>
+		<div>
+			<p1>аауау</p1>
+		</div>
     </div>
 </body>
 <footer></footer>
