add card creator :orange:
:clapper:

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 	<link rel="icon" type="image/png" href="src/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="src/css/index.css">
 	<link rel="stylesheet" type="text/css" href="src/css/main.css">
-	<script src="src/js/main.js"></script>	<script src="src/js/index.js"></script>
+	<script src="src/js/main.js"></script>	
+	<script src="src/js/index.js" defer></script>
 </head>
-<header></header>
 <body>
-    <div id="content">
-		<div>
-			<p1>сайт ммм, вас заскамили</p1>
-		</div>
+<div id="content">
+	<header>
+		<div>Header</div>
+	</header>
+    <div class="container">
+		<div id="card-container"></div>
 		<div>
 			<p1>аауау</p1>
 		</div>
     </div>
+	<footer></footer>
+</div>
 </body>
-<footer></footer>
 </html>
