--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>Web-Safe</title>
-	<meta name="description" content="Описание">
-	<meta name="keywords" content="">
+	<meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества">
+	<meta name="keywords" content="fishing, фишинг">
 	<link rel="icon" type="image/png" href="src/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="src/css/index.css">
 	<link rel="stylesheet" type="text/css" href="src/css/main.css">
@@ -12,10 +12,22 @@
 </head>
 <body>
 <div id="content">
-	<header>
-		<div>Header</div>
+	<header class="justyfy-center">
+		<div>
+			<button type="button" onclick="window.location.href='index.html'" class="logo"><img src="src/img/logo.png" style="width: 45px; height: 45px;"></button>
+		</div>
+		<div>
+			<button type="button" onclick="window.location.href='index.html'" class="logo"><h3>Hi</h3></button>
+		</div>
+		<div>
+			<button type="button" onclick="window.location.href='index.html'" class="logo"><h3>there</h3></button>
+		</div>
+		<div>
+			<button type="button" onclick="window.location.href='index.html'" class="logo"><h3>!</h3></button>
+		</div>
 	</header>
     <div class="container">
+		<div></div>
 		<div id="card-container"></div>
 		<div>
 			<p1>аауау</p1>
