upg need :sweet_potato: :

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!doctype html>
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>Web-Safe</title>
-	<meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества">
+	<meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества.">
 	<meta name="keywords" content="fishing, фишинг">
 	<link rel="icon" type="image/png" href="src/img/icon.png">
 	<link rel="stylesheet" type="text/css" href="src/css/index.css">
@@ -29,9 +30,6 @@
     <div class="container">
 		<div></div>
 		<div id="card-container"></div>
-		<div>
-			<p1>аауау</p1>
-		</div>
     </div>
 	<footer></footer>
 </div>
