--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</header>
     <div class="container">
 		<div></div>
-		<div id="card-container"></div>
+		<div id="card-container" class="justyfy-center"></div>
     </div>
 	<footer></footer>
 </div>
