smart header :heavy_check_mark:
auto header in new files, easy to setting

--- a/test.html
+++ b/test.html
@@ -1,22 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <title>Web-Safe</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test-Safe</title>
     <meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества.">
-    <meta name="keywords" content="fishing, фишинг">
+    <meta name="keywords" content="">
     <link rel="icon" type="image/png" href="src/img/icon.png">
-    <link rel="stylesheet" type="text/css" href="src/css/index.css">
+    <link rel="stylesheet" type="text/css" href="src/css/test.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
     <script src="src/js/main.js"></script>
-    <script src="src/js/index.js" defer></script>
+    <script src="src/js/test.js" defer></script>
 </head>
 <body>
 <div id="content">
     <header class=""></header>
     <div class="container">
         <div></div>
-        <div id="card-container" class="justyfy-center"></div>
     </div>
     <footer></footer>
 </div>
