--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="src/img/icon.png">
     <link rel="stylesheet" type="text/css" href="src/css/test.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
-    <script src="src/js/main.js"></script>
+    <script src="src/js/main.js" defer></script>
     <script src="src/js/test.js" defer></script>
 </head>
 <body>
