--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="src/img/icon.png">
     <link rel="stylesheet" type="text/css" href="src/css/index.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
-    <script src="src/js/main.js"></script>
+    <script src="src/js/main.js" defer></script>
     <script src="src/js/index.js" defer></script>
 </head>
 <body>
