big upd header :bulb:
new logo, new header, new pages, new year - new me

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Web-Safe</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества.">
     <meta name="keywords" content="fishing, фишинг">
-    <link rel="icon" type="image/png" href="src/img/icon.png">
+    <link rel="icon" type="image/svg" href="src/img/logo.svg">
     <link rel="stylesheet" type="text/css" href="src/css/index.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
     <script src="src/js/main.js" defer></script>
