--- a/test.html
+++ b/test.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test-Safe</title>
+    <title>Тест для самопроверки</title>
     <meta name="description" content="Веб-сайт, информирующий об угрозе мошенничества.">
     <meta name="keywords" content="">
-    <link rel="icon" type="image/png" href="src/img/icon.png">
+    <link rel="icon" type="image/svg" href="src/img/logo.svg">
     <link rel="stylesheet" type="text/css" href="src/css/test.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
     <script src="src/js/main.js" defer></script>
