--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
         <div></div>
         <div id="card-container" class="justyfy-center"></div>
+		<div id="story-container" class=""></div>
     </div>
     <footer></footer>
 </div>
