--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
     <script src="src/js/main.js" defer></script>
     <script src="src/js/index.js" defer></script>
+    <script src="src/js/story.js" defer></script>
 </head>
 <body>
 <div id="content">
