--- a/index.html
+++ b/index.html
@@ -15,36 +15,44 @@
 </head>
 <body>
 <div id="content">
-    <header class=""></header>
+    <header class="unselect"></header>
     <div class="container">
         <div></div>
         <div id="card-container" class="justyfy-center"></div>
         <div id="story-container">
             <div class="slider-container">
-                <button class="slider-btn prev" type="button">&#10094;</button>
+                <button class="slider-btn prev unselect" type="button">&#10094;</button>
                 <div class="slider">
                     <div class="slide">
-                        <h2>Story 1</h2>
-                        <p>This is the first story. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                        <img src="src/img/story1.jpg" alt="Irina">
+                        <h2>Ирина</h2>
+                        <p>Меня зовут Ирина, и я мама 10-летнего мальчика по имени Саша. Недавно Саша познакомился с новым другом в онлайн-игре, который предложил ему участвовать в конкурсе на редкие игровые предметы. Это вызвало у меня беспокойство, так как Саша доверял незнакомцу. Я решила, что пора провести с ним серьезный разговор о безопасности в интернете.
+                            Мы сели вместе и изучили основные правила безопасности: как защищать личные данные и распознавать мошенников. Я объяснила Саше, что нельзя доверять всем подряд в интернете и что важно быть осторожным с незнакомцами. Теперь Саша стал более осмотрительным в общении онлайн и понимает важность безопасности в сети.</p>
                     </div>
                     <div class="slide">
-                        <h2>Story 2</h2>
-                        <p>This is the second story. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                        <img src="src/img/story2.jpg" alt="Anna">
+                        <h2>Анна</h2>
+                        <p>Меня зовут Ирина, и я мама 10-летнего Саши. Недавно он познакомился с новым другом в онлайн-игре, который предложил ему участвовать в конкурсе на редкие игровые предметы. Это меня сильно насторожило, ведь Саша полностью доверял этому незнакомцу. Я поняла, что пора серьезно поговорить с ним о безопасности в интернете. 
+                            Мы сели вместе, и я объяснила ему основные правила: как защищать личные данные и распознавать мошенников. Я рассказала, что нельзя доверять всем подряд в интернете и как важно быть осторожным с незнакомцами. Саша внимательно выслушал и теперь стал гораздо осмотрительнее в онлайн-общении, осознав важность безопасности в сети.</p>
                     </div>
                     <div class="slide">
-                        <h2>Story 3</h2>
-                        <p>This is the third story. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                        <img src="src/img/story3.jpg" alt="Olga">
+                        <h2>Ольга</h2>
+                        <p>Я мама троих детей, и недавно столкнулась с серьёзной проблемой: получила фишинговый e-mail, который мог привести к краже личной информации. Это заставило меня задуматься о безопасности нашей семьи в интернете.
+                            Чтобы решить эту проблему, я предприняла несколько шагов. Во-первых, установила сложные пароли и активировала двухфакторную аутентификацию на всех наших аккаунтах. Затем провела полное сканирование всех устройств на наличие вредоносных программ и очистила историю браузера. Эти меры значительно улучшили нашу кибербезопасность и помогли защитить семью от будущих угроз. Теперь я спокойнее чувствую себя, зная, что сделала всё возможное для нашей безопасности в интернете.</p>
                     </div>
                     <div class="slide">
-                        <h2>Story 4</h2>
-                        <p>This is the fourth story. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                        <img src="src/img/story4.jpg" alt="Anna">
+                        <h2>Анна</h2>
+                        <p>in dev.</p>
                     </div>
                     <div class="slide">
-                        <h2>Story 5</h2>
-                        <p>This is the fifth story. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+                        <img src="src/img/story5.jpg" alt="Vadim">
+                        <h2>Вадим</h2>
+                        <p>Я хотел зарегистрироваться в Альфа-Банке, но доступ был ограничен. Через несколько дней получил СМС, якобы от банка, с просьбой перейти по ссылке и ввести данные. Не подозревая подвоха, я перешел по ссылке и ввел свои банковские данные. Первая попытка не удалась, но вторая прошла успешно. Однако через полминуты меня выкинуло из системы. Когда я попытался зайти снова, оказалось, что все мои деньги исчезли. Я был в шоке и не мог понять, как это произошло. Обратился в банк и узнал, что стал жертвой фишинга. Мошенники создали поддельный сайт, и я попался на удочку. Теперь я стал более осторожным в интернете и всегда проверяю информацию перед тем, как переходить по ссылкам или вводить свои данные.</p>
                     </div>
                 </div>
-                <button class="slider-btn next" type="button">&#10095;</button>
+                <button class="slider-btn next unselect" type="button">&#10095;</button>
             </div>
             <div class="dots">
                 <span class="dot" onclick="currentSlide(1)"></span>
