--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                             Мы сели вместе, и я объяснила ему основные правила: как защищать личные данные и распознавать мошенников. Я рассказала, что нельзя доверять всем подряд в интернете и как важно быть осторожным с незнакомцами. Саша внимательно выслушал и теперь стал гораздо осмотрительнее в онлайн-общении, осознав важность безопасности в сети.</p>
                     </div>
                     <div class="slide">
-                        <img src="src/img/story3.jpg" alt="Olga">
+                        <img src="src/img/story3.jpg" alt="Sergey">
+                        <h2>Сергей</h2>
+                        <p>Однажды я получил странное письмо на электронную почту: в нем утверждалось, что мои личные данные оказались в руках злоумышленников. Проверив свои аккаунты, я с ужасом обнаружил, что взломали мой основной профиль в соцсетях и доступ к банковскому приложению. Хакеры потребовали деньги, угрожая распространить компрометирующую информацию, которую они будто бы нашли. Я обратился в полицию и одновременно попытался восстановить учетные записи, сменив пароли и уведомив банк. В итоге, благодаря поддержке специалистов, удалось предотвратить утечку данных, но этот случай стал для меня серьезным уроком об интернет-безопасности.</p>
+                    </div>
+                    <div class="slide">
+                        <img src="src/img/story4.jpg" alt="Olga">
                         <h2>Ольга</h2>
                         <p>Я мама троих детей, и недавно столкнулась с серьёзной проблемой: получила фишинговый e-mail, который мог привести к краже личной информации. Это заставило меня задуматься о безопасности нашей семьи в интернете.
                             Чтобы решить эту проблему, я предприняла несколько шагов. Во-первых, установила сложные пароли и активировала двухфакторную аутентификацию на всех наших аккаунтах. Затем провела полное сканирование всех устройств на наличие вредоносных программ и очистила историю браузера. Эти меры значительно улучшили нашу кибербезопасность и помогли защитить семью от будущих угроз. Теперь я спокойнее чувствую себя, зная, что сделала всё возможное для нашей безопасности в интернете.</p>
-                    </div>
-                    <div class="slide">
-                        <img src="src/img/story4.jpg" alt="Anna">
-                        <h2>Анна</h2>
-                        <p>in dev.</p>
                     </div>
                     <div class="slide">
                         <img src="src/img/story5.jpg" alt="Vadim">
