oops small fix 🐟

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div></div>
         <div id="card-container" class="justyfy-center"></div>
         <div id="story-container">
+            <h3>Истории обманутых людей</h3>
             <div class="slider-container">
                 <button class="slider-btn prev unselect" type="button">&#10094;</button>
                 <div class="slider">
@@ -32,8 +33,8 @@
                     <div class="slide">
                         <img src="src/img/story2.jpg" alt="Anna">
                         <h2>Анна</h2>
-                        <p>Меня зовут Ирина, и я мама 10-летнего Саши. Недавно он познакомился с новым другом в онлайн-игре, который предложил ему участвовать в конкурсе на редкие игровые предметы. Это меня сильно насторожило, ведь Саша полностью доверял этому незнакомцу. Я поняла, что пора серьезно поговорить с ним о безопасности в интернете. 
-                            Мы сели вместе, и я объяснила ему основные правила: как защищать личные данные и распознавать мошенников. Я рассказала, что нельзя доверять всем подряд в интернете и как важно быть осторожным с незнакомцами. Саша внимательно выслушал и теперь стал гораздо осмотрительнее в онлайн-общении, осознав важность безопасности в сети.</p>
+                        <p>Я всегда старалась поддерживать связь с внуками через интернет. Однажды получила письмо, которое выглядело как официальное уведомление от моего банка. В письме говорилось, что с моего счета пытаются снять деньги, и мне нужно срочно подтвердить свои данные. Не подозревая подвоха, я перешла по ссылке и ввела свои банковские данные. Когда я пошла в банк, оказалось, что все мои сбережения исчезли.
+                            В банке мне объяснили, что я стала жертвой фишинговой атаки. Мошенники создали поддельный сайт и украли данные моей карты. Я решила обратиться к внуку. Он объяснил несколько правил: никогда не переходить по ссылкам из подозрительных писем, проверять адрес сайта и не делиться личной информацией. Теперь я стала более осторожной в интернете и всегда проверяю информацию перед тем, как переходить по ссылкам или вводить свои данные.</p>
                     </div>
                     <div class="slide">
                         <img src="src/img/story3.jpg" alt="Sergey">
