--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <div class="slide">
                         <img src="src/img/story3.jpg" alt="Sergey">
                         <h2>Сергей</h2>
-                        <p>Однажды я получил странное письмо на электронную почту: в нем утверждалось, что мои личные данные оказались в руках злоумышленников. Проверив свои аккаунты, я с ужасом обнаружил, что взломали мой основной профиль в соцсетях и доступ к банковскому приложению. Хакеры потребовали деньги, угрожая распространить компрометирующую информацию, которую они будто бы нашли. Я обратился в полицию и одновременно попытался восстановить учетные записи, сменив пароли и уведомив банк. В итоге, благодаря поддержке специалистов, удалось предотвратить утечку данных, но этот случай стал для меня серьезным уроком об интернет-безопасности.</p>
+                        <p>Однажды я получил странное письмо на электронную почту: в нем утверждалось, что мои личные данные оказались в руках злоумышленников. Проверив свои аккаунты, я с ужасом обнаружил, что взломали мой основной профиль в соцсетях и доступ к банковскому приложению. Хакеры потребовали деньги, угрожая распространить компрометирующую информацию, которую они будто бы нашли. 
+                            Я обратился в полицию и одновременно попытался восстановить учетные записи, сменив пароли и уведомив банк. В итоге, благодаря поддержке специалистов, удалось предотвратить утечку данных, но этот случай стал для меня серьезным уроком об интернет-безопасности.</p>
                     </div>
                     <div class="slide">
                         <img src="src/img/story4.jpg" alt="Olga">
@@ -50,7 +51,8 @@
                     <div class="slide">
                         <img src="src/img/story5.jpg" alt="Vadim">
                         <h2>Вадим</h2>
-                        <p>Я хотел зарегистрироваться в Альфа-Банке, но доступ был ограничен. Через несколько дней получил СМС, якобы от банка, с просьбой перейти по ссылке и ввести данные. Не подозревая подвоха, я перешел по ссылке и ввел свои банковские данные. Первая попытка не удалась, но вторая прошла успешно. Однако через полминуты меня выкинуло из системы. Когда я попытался зайти снова, оказалось, что все мои деньги исчезли. Я был в шоке и не мог понять, как это произошло. Обратился в банк и узнал, что стал жертвой фишинга. Мошенники создали поддельный сайт, и я попался на удочку. Теперь я стал более осторожным в интернете и всегда проверяю информацию перед тем, как переходить по ссылкам или вводить свои данные.</p>
+                        <p>Я хотел авторизироваться в Альфа-Банке, но доступ был ограничен. Через несколько дней получил СМС, якобы от банка, с просьбой перейти по ссылке и ввести данные. Не подозревая подвоха, я перешел по ссылке и ввел свои банковские данные. Первая попытка не удалась, но вторая прошла успешно. Однако через полминуты меня выкинуло из системы. Когда я попытался зайти снова, оказалось, что все мои деньги исчезли. 
+                            Я был в шоке и не мог понять, как это произошло. Обратился в банк и узнал, что стал жертвой фишинга. Мошенники создали поддельный сайт, и я попался на удочку. Теперь я стал более осторожным в интернете и всегда проверяю информацию перед тем, как переходить по ссылкам или вводить свои данные.</p>
                     </div>
                 </div>
                 <button class="slider-btn next unselect" type="button">&#10095;</button>
