--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" type="text/css" href="src/css/index.css">
     <link rel="stylesheet" type="text/css" href="src/css/main.css">
     <script src="src/js/main.js" defer></script>
-    <script src="src/js/index.js" defer></script>
+    <script src="src/js/index.js" defer>
+     
+    </script>
     <script src="src/js/story.js" defer></script>
 </head>
 <body>
@@ -23,6 +25,7 @@
         <div id="story-container">
             <div class="slider-container">
                 <h3>Истории обманутых людей</h3>
+                <div class="line"></div>
                 <button class="slider-btn prev unselect" type="button">&#10094;</button>
                 <div class="slider">
                     <div class="slide">
