--- a/test.html
+++ b/test.html
@@ -15,15 +15,19 @@
 <body>
 <div id="content">
     <header class="unselect"></header>
-    <div class="container items-center">
-        <div id="quiz-container">
-            <h1>Тест</h1>
-            <div id="question-container">
-              <p id="question"></p>
-              <div id="answers"></div>
-            </div>
-            <button id="next-button">Далее</button>
-          </div>
+    <div class="container items-center grid">
+      <div id="quiz-container">
+        <h1>Тест</h1>
+        <div class="progress-container">
+            <div id="progress-bar"></div>
+        </div>
+        <div id="question-container">
+            <p id="question"></p>
+            <div id="answers"></div>
+            <p id="feedback"></p>
+        </div>
+        <div><button id="next-button">Далее</button></div>
+    </div>
     </div>
     <footer></footer>
 </div>
